<resources>
	<string name="More">More</string>
	<string name="Less">Less</string>
	<string name="Start_activity_normal">Start activity (normal)</string>
	<string name="Start_activity_result">Start activity (result)</string>
	<string name="Start_activity_result_with_data">Start activity (result) (with data)</string>
	<string name="End">End</string>
	<string name="Open_url">Open url</string>
	<string name="Value_two_points">Value:</string>
	<string name="Url_to_look_for">Url to look for on a browser</string>
	<string name="Start_activity_with_data">Start activity with data</string>
	<string name="Open_on_browser">Open on browser</string>
	<string name="Open_on_webview">Open on webview</string>
	<string name="Fruit">Fruta</string>
	<string name="Yes">Yes</string>
	<string name="No">No</string>
	<string name="Maybe">Maybe</string>
	<string name="navigation_drawer_open">Open</string>
	<string name="navigation_drawer_close">Close</string>
	<string name="Some_action">Alguna acción</string>
	<string name="ongoing_notification_channel_title">Titulo del canal de notificaciones</string>
	<string name="ongoing_notification_channel_description">Descripcion del canal de notificaciones</string>
	<string name="Liked">Me gusta</string>
	<string name="Favorited">Es mi favorito</string>
	<string name="Hashtag_variable">#%1$d</string>
	<string name="Photo_capture">Capturar foto</string>
	<string name="Photo_gallery">Foto de galería</string>
	<string-array name="fruits">
		<item>Manzana</item>
		<item>Pera</item>
		<item>Plátano</item>
		<item>Granada</item>
		<item>Higo</item>
		<item>Kiwi</item>
		<item>Mango</item>
		<item>Aguacate</item>
		<item>Gazpacho</item>
		<item>Mochilo</item>
	</string-array>
</resources>