<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/general">
	
	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:columnCount="2">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/Value_two_points"/>
		<TextView
			android:id="@+id/tv_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="0"/>
		<Button
			android:id="@+id/bt_more"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/More"/>
		<Button
			android:id="@+id/bt_less"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/Less"/>
	</GridLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<Button
			android:id="@+id/bt_start_activity_normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/Start_activity_normal"/>
		<LinearLayout
			android:id="@+id/ll_start_act_with_data"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/Start_activity_with_data"/>
			<CheckBox
				android:id="@+id/cb_start_act_with_data"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"/>
		</LinearLayout>
		<Button
			android:id="@+id/bt_start_activity_result"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/Start_activity_result"/>
		<EditText
			android:id="@+id/et_url"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/Url_to_look_for"/>
		<RadioGroup
			android:id="@+id/rg_open_target"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:checkedButton="@id/cb_open_browser">
			<androidx.appcompat.widget.AppCompatRadioButton
				android:id="@+id/cb_open_browser"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/Open_on_browser"/>
			<androidx.appcompat.widget.AppCompatRadioButton
				android:id="@+id/cb_open_webview"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/Open_on_webview"/>
		</RadioGroup>
		<Button
			android:id="@+id/bt_start_browser"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/Open_url"/>
		<WebView
			android:id="@+id/webview"
			android:layout_width="match_parent"
			android:layout_height="200dp"/>
	</LinearLayout>

</LinearLayout>